Fixed profile picture getting squashed

--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -146,6 +146,7 @@ i {
 }
 
 .message_content .msg {
+  max-width: 450px;
   word-wrap: break-word;
 }
 
